RESOLVED FIXED118815
ANGLE needs a repeatable way to update
https://bugs.webkit.org/show_bug.cgi?id=118815
Summary ANGLE needs a repeatable way to update
Alex Christensen
Reported 2013-07-17 14:51:04 PDT
Created attachment 206915 [details] changes made from ANGLE r2426 Updating ANGLE is a pain. My update in r152755 was done by making changes to ANGLE, running Bison, undoing some of those changes, manually editing generated code, and copying files. This process needs to be streamlined. I've done a different fix to glslang.y that causes the generated files to not need manual editing. Here's the process to reproduce these files: 1) Apply patch to make changes to ANGLE. 2) Execute these commands to run Bison: cd src/compiler ./generate_parser.sh cd preprocessor chmod 755 generate_parser.sh ./generate_parser.sh 3) Copy ANGLE files into webkit repository. The next step is getting all builds to run Bison as part of the build so we can remove the generated files entirely.
Attachments
changes made from ANGLE r2426 (4.98 KB, application/octet-stream)
2013-07-17 14:51 PDT, Alex Christensen
no flags
Patch (6.47 KB, patch)
2013-07-17 14:55 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2013-07-17 14:55:55 PDT
WebKit Commit Bot
Comment 2 2013-07-17 14:59:51 PDT
Attachment 206919 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/ThirdParty/ANGLE/ChangeLog', u'Source/ThirdParty/ANGLE/src/compiler/glslang.y', u'Source/ThirdParty/ANGLE/src/compiler/glslang_lex.cpp', u'Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp', u'Source/ThirdParty/ANGLE/src/compiler/glslang_tab.h']" exit_code: 1 Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:773: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:774: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:775: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:776: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:777: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:778: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:779: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Source/ThirdParty/ANGLE/src/compiler/glslang_tab.cpp:780: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 8 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dean Jackson
Comment 3 2013-07-17 16:59:16 PDT
Comment on attachment 206919 [details] Patch I'd much prefer if this was done upstream, but let's land it for now and see if we can get ANGLE to adopt this or something like it.
WebKit Commit Bot
Comment 4 2013-07-17 17:22:25 PDT
Comment on attachment 206919 [details] Patch Clearing flags on attachment: 206919 Committed r152821: <http://trac.webkit.org/changeset/152821>
WebKit Commit Bot
Comment 5 2013-07-17 17:22:27 PDT
All reviewed patches have been landed. Closing bug.
Dean Jackson
Comment 6 2013-07-20 15:24:28 PDT
Alex Christensen
Comment 7 2013-08-20 09:01:33 PDT
This was included in r153064
Note You need to log in before you can comment on or make changes to this bug.