Made a repeatable process for updating ANGLE that does not include manually editing any files. https://bugs.webkit.org/show_bug.cgi?id=118815

Reviewed by Dean Jackson.

* src/compiler/glslang.y:
* src/compiler/glslang_lex.cpp:
* src/compiler/glslang_tab.cpp:
* src/compiler/glslang_tab.h: Put YYLTYPE definition in %union instead of prologue and ran Bison.


Canonical link: https://commits.webkit.org/136691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152821 268f45cc-cd09-0410-ab3c-d52691b4dbfc